--- a/main-app/.env.development
+++ b/main-app/.env.development
@@ -10,3 +10,10 @@ VITE_USE_MOCK=true
 
 # Mock 延迟时间（毫秒）
 VITE_MOCK_DELAY=500
+
+# 架构优化功能开关（Feature Flags）
+# 统一配置管理
+VITE_FEATURE_UNIFIED_CONFIG=true
+
+# 标准化路由同步
+VITE_FEATURE_STANDARD_ROUTE_SYNC=false
