--- a/main-app/package.json
+++ b/main-app/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
@@ -21,9 +23,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
+    "@vitest/ui": "^1.0.4",
     "eslint": "^8.55.0",
     "eslint-plugin-vue": "^9.19.2",
     "sass": "^1.69.5",
-    "vite": "^5.0.4"
+    "vite": "^5.0.4",
+    "vitest": "^1.0.4"
   }
 }
