--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "lint:agent": "cd agent-app && pnpm lint",
     "lint:cluster": "cd cluster-app && pnpm lint",
     "lint:monitor": "cd monitor-app && pnpm lint",
-    "lint:system": "cd system-app && pnpm lint"
+    "lint:system": "cd system-app && pnpm lint",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.1",
     "concurrently": "^8.2.2"
   },
   "engines": {
