fix(error-reporter): 解决 ErrorBoundary 超时误报

--- a/system-app/.env.development
+++ b/system-app/.env.development
@@ -8,3 +8,7 @@ VITE_USE_MOCK=true
 
 # Mock 延迟时间（毫秒）
 VITE_MOCK_DELAY=300
+
+# 架构优化功能开关（Feature Flags）
+# 标准化路由同步
+VITE_FEATURE_STANDARD_ROUTE_SYNC=true
