--- a/main-app/package.json
+++ b/main-app/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint": "eslint . --fix",
     "test": "vitest",
     "test:ui": "vitest --ui"
   },
@@ -22,10 +22,11 @@
     "wujie-vue3": "^1.0.29"
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vitest/ui": "^1.0.4",
-    "eslint": "^8.55.0",
-    "eslint-plugin-vue": "^9.19.2",
+    "eslint": "^9.37.0",
+    "eslint-plugin-vue": "^9.33.0",
     "sass": "^1.69.5",
     "vite": "^5.0.4",
     "vitest": "^1.0.4"
