--- a/system-app/package.json
+++ b/system-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "system-app",
   "version": "1.0.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "vite --port 3005 --strictPort",
@@ -21,7 +22,10 @@
     "xe-utils": "^3.5.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@vitejs/plugin-vue": "^4.3.4",
+    "eslint": "^9.37.0",
+    "eslint-plugin-vue": "^9.33.0",
     "sass": "^1.66.1",
     "vite": "^5.0.4"
   }
