feat(api): 添加用户认证功能

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "build": "cross-env NODE_OPTIONS=--max-old-space-size=8192 turbo build",
     "build:analyze": "turbo build:analyze",
     "build:antd": "pnpm run build --filter=@vben/web-antd",
+    "build:auth": "pnpm run build --filter=@vben/web-auth",
+    "build:k8s": "pnpm run build --filter=@vben/web-k8s",
     "build:docker": "./scripts/deploy/build-local-docker-image.sh",
     "build:docs": "pnpm run build --filter=@vben/docs",
     "build:ele": "pnpm run build --filter=@vben/web-ele",
@@ -43,6 +45,8 @@
     "commit": "czg",
     "dev": "turbo-run dev",
     "dev:antd": "pnpm -F @vben/web-antd run dev",
+    "dev:auth": "pnpm -F @vben/web-auth run dev",
+    "dev:k8s": "pnpm -F @vben/web-k8s run dev",
     "dev:docs": "pnpm -F @vben/docs run dev",
     "dev:ele": "pnpm -F @vben/web-ele run dev",
     "dev:naive": "pnpm -F @vben/web-naive run dev",
@@ -54,7 +58,7 @@
     "preview": "turbo-run preview",
     "publint": "vsh publint",
     "reinstall": "pnpm clean --del-lock && pnpm install",
-    "test:unit": "vitest run --dom",
+    "test:unit": "vitest run",
     "test:e2e": "turbo run test:e2e",
     "update:deps": "npx taze -r -w",
     "version": "pnpm exec changeset version && pnpm install --no-frozen-lockfile",
@@ -82,6 +86,7 @@
     "cspell": "catalog:",
     "happy-dom": "catalog:",
     "is-ci": "catalog:",
+    "jsdom": "^27.0.0",
     "lefthook": "catalog:",
     "playwright": "catalog:",
     "rimraf": "catalog:",
