--- a/apps/web-auth/.env.development
+++ b/apps/web-auth/.env.development
@@ -4,8 +4,11 @@ VITE_APP_TITLE=统一认证中心
 # 应用端口
 VITE_PORT=5665
 
-# API 地址（使用主应用的 Mock 服务）
-VITE_GLOB_API_URL=http://localhost:5320/api
+# API 地址
+VITE_GLOB_API_URL=/api
+
+# 是否开启 Nitro Mock服务，true 为开启，false 为关闭
+VITE_NITRO_MOCK=true
 
 # 主应用 URL
 VITE_MAIN_APP_URL=http://localhost:5666
@@ -18,3 +21,6 @@ VITE_ROUTER_HISTORY=hash
 
 # Base URL
 VITE_BASE=/
+
+# 是否注入全局loading
+VITE_INJECT_APP_LOADING=true
