feat(ui): 更新快速参考页面路由

--- a/apps/web-k8s/package.json
+++ b/apps/web-k8s/package.json
@@ -44,8 +44,12 @@
     "@vueuse/core": "catalog:",
     "ant-design-vue": "catalog:",
     "dayjs": "catalog:",
+    "js-yaml": "^4.1.0",
     "pinia": "catalog:",
     "vue": "catalog:",
     "vue-router": "catalog:"
+  },
+  "devDependencies": {
+    "@types/js-yaml": "^4.0.9"
   }
 }
