--- a/apps/web-k8s/.env.development
+++ b/apps/web-k8s/.env.development
@@ -27,7 +27,7 @@ VITE_GLOB_API_URL=/api
 # 是否开启 Nitro Mock 服务 (backend-mock)
 # - true: Vite 代理 /api 到 http://localhost:5320 (backend-mock)
 # - false: 使用 VITE_GLOB_API_URL 配置的真实地址
-VITE_NITRO_MOCK=false
+VITE_NITRO_MOCK=true
 
 # 是否开启 K8s API Mock 模式
 # - true: 使用前端内置 Mock (支持部分资源如 Secret)
